cmake_minimum_required(VERSION 3.10)

project(CPlusPlus_Course)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(lib/Homework02)
add_subdirectory(lib/Homework03)
add_subdirectory(lib/Homework04)
add_subdirectory(lib/FinalProject)

add_executable(Homework_01 ./src/Homework_01.cpp)
add_executable(Homework_02 ./tests/Homework_02.cpp)
add_executable(Homework_03 ./tests/Homework_03.cpp)
add_executable(Homework_04 ./tests/Homework_04.cpp)
add_executable(Final_Project_Test_MemberTypes ./tests/Test_MemberTypes.cpp)
add_executable(Final_Project_Test_PersonnelManagementSystem ./tests/Test_PersonnelManagementSystem.cpp)
add_executable(Final_Project_Test_Polymorphism ./tests/Test_Polymorphism.cpp)
add_executable(Final_Project_Test_HeterogeneousList ./tests/Test_HeterogeneousList.cpp)
add_executable(InteractivePMS ./src/InteractivePMS.cpp)

target_include_directories(Homework_02 PUBLIC lib/Homework02)
target_include_directories(Homework_03 PUBLIC lib/Homework03)
target_include_directories(Homework_04 PUBLIC lib/Homework04)
target_include_directories(Final_Project_Test_MemberTypes PUBLIC lib/FinalProject)
target_include_directories(Final_Project_Test_PersonnelManagementSystem PUBLIC lib/FinalProject)
target_include_directories(Final_Project_Test_Polymorphism PUBLIC lib/FinalProject)
target_include_directories(Final_Project_Test_HeterogeneousList PUBLIC lib/FinalProject)
target_include_directories(InteractivePMS PUBLIC lib/FinalProject)

target_link_libraries(Homework_02 PUBLIC MyMatrix)
target_link_libraries(Homework_03 PUBLIC MyMatrix3)
target_link_libraries(Homework_04 PUBLIC MyMatrix4)
target_link_libraries(Final_Project_Test_MemberTypes PUBLIC MemberTypes)
target_link_libraries(Final_Project_Test_PersonnelManagementSystem PUBLIC PersonnelManagementSystem)
target_link_libraries(Final_Project_Test_Polymorphism PUBLIC MemberTypes)
target_link_libraries(Final_Project_Test_HeterogeneousList PUBLIC HeterogeneousList)
target_link_libraries(InteractivePMS PUBLIC PMS_UI)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message("Debug Mode")
    target_compile_definitions(Homework_01 PUBLIC DEBUG)
    target_compile_definitions(Homework_02 PUBLIC DEBUG)
    target_compile_definitions(Homework_03 PUBLIC DEBUG)
    target_compile_definitions(Homework_04 PUBLIC DEBUG)
    target_compile_definitions(Final_Project_Test_MemberTypes PUBLIC DEBUG)
    target_compile_definitions(Final_Project_Test_PersonnelManagementSystem PUBLIC DEBUG)
    target_compile_definitions(InteractivePMS PUBLIC DEBUG)
    target_compile_definitions(MyMatrix PUBLIC DEBUG)
    target_compile_definitions(MyMatrix3 PUBLIC DEBUG)
    target_compile_definitions(MyMatrix4 PUBLIC DEBUG)
    target_compile_definitions(MemberTypes PUBLIC DEBUG)
    target_compile_definitions(PersonnelManagementSystem PUBLIC DEBUG)
    target_compile_definitions(Final_Project_Test_Polymorphism PUBLIC DEBUG)
    target_compile_definitions(Final_Project_Test_HeterogeneousList PUBLIC DEBUG)
    target_compile_definitions(PMS_UI PUBLIC DEBUG)
endif()
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    message("Release Mode")
    target_compile_options(Homework_01 PUBLIC -O2)
    target_compile_options(Homework_02 PUBLIC -O2)
    target_compile_options(Homework_03 PUBLIC -O2)
    target_compile_options(Homework_04 PUBLIC -O2)
    target_compile_options(Final_Project_Test_MemberTypes PUBLIC -O2)
    target_compile_options(Final_Project_Test_PersonnelManagementSystem PUBLIC -O2)
    target_compile_options(InteractivePMS PUBLIC -O2)
    target_compile_options(MyMatrix PUBLIC -O2)
    target_compile_options(MyMatrix3 PUBLIC -O2)
    target_compile_options(MyMatrix4 PUBLIC -O2)
    target_compile_options(MemberTypes PUBLIC -O2)
    target_compile_options(PersonnelManagementSystem PUBLIC -O2)
    target_compile_options(Final_Project_Test_Polymorphism PUBLIC -O2)
    target_compile_options(Final_Project_Test_HeterogeneousList PUBLIC -O2)
    target_compile_options(PMS_UI PUBLIC -O2)
endif()
