add_library(MemberTypes MemberTypes.h MemberTypes.cpp)
add_library(PersonnelManagementSystem PersonnelManagementSystem.h PersonnelManagementSystem.cpp MemberTypes.h MemberTypes.cpp)
add_library(PMS_UI PersonnelManagementSystem.h PersonnelManagementSystem.cpp MemberTypes.h MemberTypes.cpp PersonnelManagementSystem_UI.h PersonnelManagementSystem_UI.cpp)